# PlayServices

./: .gitignore  .travis.yml  PlayServices.sln
.github/workflows/: build.yaml
client/native/build_cmake/: CMakeLists.txt
client/native/include/: SqliteDb.h  SqliteStatement.h
client/native/include/basedb/: BaseDbClient.h
client/native/include/coverdb/: CoverDbClient.h
client/native/include/localdb/: LocalDbClient.h
client/native/src/basedb/: BaseDbClient.cpp
client/native/src/coverdb/: CoverDbClient.cpp
client/native/src/localdb/: LocalDbClient.cpp
client/native/src/thegamesdb/: TheGamesDbClient.cpp
client/native/test/: Main.cpp
client/web/: buildsTest.html  compatibilityAdd.html  compatibilityAdd.js  compatibilitySummaryTest.html  compatibilityView.html  compatibilityView.js  index.html  playApp.js  ps.css
client/web_gamedata/: .env.development  .env.staging  package-lock.json  package.json
client/web_gamedata/public/: index.html
client/web_gamedata/src/: App.tsx
server/: Build.cs  ConfigKeys.cs  Dockerfile  JsonExceptionMiddleware.cs  PatreonApi.cs  Program.cs  SelfUserRequirement.cs  Startup.cs  User.cs  api.php  aws-windows-deployment-manifest.json  composer.json  config.php  config_template.php  database.php  database.sql  endpoint.php  endpoint_builds.php  endpoint_compatibility.php  endpoint_game.php  server.csproj
server/Controllers/: BuildsController.cs  CallbacksController.cs  CompatibilityController.cs  GameDataController.cs  HealthController.cs  UsersController.cs
server/DataModel/: GameDataInfo.cs  GameDataService.cs  SessionService.cs  User.cs  UserService.cs
server/DataModel/Interfaces/: IGameDataService.cs
server/Services/: GameDataService.cs  SessionService.cs  UserService.cs
server/Services/Interfaces/: IGameDataService.cs  ISessionService.cs  IUserService.cs
server/tests/: builds.php
tools/CompatibilityValidator/: CompatibilityDataExtractor.cs  CompatibilityObjects.cs  CompatibilityValidator.csproj  Github.cs  Program.cs
